.metadata/.plugins/org.eclipse.cdt.ui/FlowDetectLifeCycle.build.log
15:03:18 **** Auto Build of configuration Debug for project FlowDetectLifeCycle ****
make all 
'Building file: ../src/axi_map.c'
'Invoking: ARM Linux gcc compiler'
arm-xilinx-linux-gnueabi-gcc -Wall -O0 -g3 -I"G:\TEST-PROJECT\video_diagnosis.sdk.ex\FlowDetectLifeCycle\src\uCOS" -c -fmessage-length=0 -MT"src/axi_map.o" -MMD -MP -MF"src/axi_map.d" -MT"src/axi_map.d" -o "src/axi_map.o" "../src/axi_map.c"
../src/axi_map.c: In function 'getVirtualChBaseAddr':
../src/axi_map.c:37:30: warning: initialization discards 'volatile' qualifier from pointer target type
  unsigned char* ch_base_Addr=g_virtual_addr+_ch*CHANNEL_BLOCK_SIZE;
                              ^
../src/axi_map.c: In function 'memcpy_video_avg':
../src/axi_map.c:245:21: warning: initialization discards 'volatile' qualifier from pointer target type
  unsigned char *ptr=m_virtual_addr+_ch*CHANNEL_BLOCK_SIZE;
                     ^
../src/axi_map.c: In function 'memcpy_video_frame':
../src/axi_map.c:264:25: warning: initialization discards 'volatile' qualifier from pointer target type
   unsigned char *ptr_ch=m_virtual_addr+_Channel*CHANNEL_BLOCK_SIZE;
                         ^
../src/axi_map.c: In function 'video_unmap':
../src/axi_map.c:278:10: warning: passing argument 1 of 'munmap' discards 'volatile' qualifier from pointer target type
   munmap(m_virtual_addr, m_size);
          ^
In file included from ../src/linux_header.h:41:0,
                 from ../src/axi_map.h:4,
                 from ../src/axi_map.c:1:
d:\xilinx\sdk\2015.4\gnu\arm\nt\arm-xilinx-linux-gnueabi\libc\usr\include\sys\mman.h:76:12: note: expected 'void *' but argument is of type 'volatile unsigned char *'
 extern int munmap (void *__addr, size_t __len) __THROW;
            ^
../src/axi_map.c: In function 'memcpy_video':
../src/axi_map.c:294:15: warning: passing argument 2 of 'memcpy' discards 'volatile' qualifier from pointer target type
  memcpy(_data,m_virtual_addr,_size);
               ^
In file included from ../src/linux_header.h:7:0,
                 from ../src/axi_map.h:4,
                 from ../src/axi_map.c:1:
d:\xilinx\sdk\2015.4\gnu\arm\nt\arm-xilinx-linux-gnueabi\libc\usr\include\string.h:46:14: note: expected 'const void * __restrict__' but argument is of type 'volatile unsigned char *'
 extern void *memcpy (void *__restrict __dest, const void *__restrict __src,
              ^
../src/axi_map.c: In function 'AXILiteunmmap':
../src/axi_map.c:351:12: warning: passing argument 1 of 'munmap' discards 'volatile' qualifier from pointer target type
     munmap(g_virtual_addr, 0x1000);
            ^
In file included from ../src/linux_header.h:41:0,
                 from ../src/axi_map.h:4,
                 from ../src/axi_map.c:1:
d:\xilinx\sdk\2015.4\gnu\arm\nt\arm-xilinx-linux-gnueabi\libc\usr\include\sys\mman.h:76:12: note: expected 'void *' but argument is of type 'volatile unsigned char *'
 extern int munmap (void *__addr, size_t __len) __THROW;
            ^
../src/axi_map.c: At top level:
../src/axi_map.c:81:0: error: unterminated #ifdef
 #ifdef TRANSFER_DATA_WITH_DMA
 ^
In file included from ../src/type.h:6:0,
                 from ../src/base.h:5,
                 from ../src/axi_map.h:6,
                 from ../src/axi_map.c:1:
../src/opencv2/core/types_c.h:379:17: warning: 'cvFloor' defined but not used [-Wunused-function]
 CV_INLINE  int  cvFloor( double value )
                 ^
../src/opencv2/core/types_c.h:396:17: warning: 'cvCeil' defined but not used [-Wunused-function]
 CV_INLINE  int  cvCeil( double value )
                 ^
../src/opencv2/core/types_c.h:415:15: warning: 'cvIsNaN' defined but not used [-Wunused-function]
 CV_INLINE int cvIsNaN( double value )
               ^
../src/opencv2/core/types_c.h:424:15: warning: 'cvIsInf' defined but not used [-Wunused-function]
 CV_INLINE int cvIsInf( double value )
               ^
../src/opencv2/core/types_c.h:439:17: warning: 'cvRNG' defined but not used [-Wunused-function]
 CV_INLINE CvRNG cvRNG( int64 seed CV_DEFAULT(-1))
                 ^
../src/opencv2/core/types_c.h:455:18: warning: 'cvRandReal' defined but not used [-Wunused-function]
 CV_INLINE double cvRandReal( CvRNG* rng )
                  ^
../src/opencv2/core/types_c.h:769:17: warning: 'cvMat' defined but not used [-Wunused-function]
 CV_INLINE CvMat cvMat( int rows, int cols, int type, void* data CV_DEFAULT(NULL))
                 ^
../src/opencv2/core/types_c.h:799:20: warning: 'cvmGet' defined but not used [-Wunused-function]
 CV_INLINE  double  cvmGet( const CvMat* mat, int row, int col )
                    ^
../src/opencv2/core/types_c.h:817:18: warning: 'cvmSet' defined but not used [-Wunused-function]
 CV_INLINE  void  cvmSet( CvMat* mat, int row, int col, double value )
                  ^
../src/opencv2/core/types_c.h:834:15: warning: 'cvIplDepth' defined but not used [-Wunused-function]
 CV_INLINE int cvIplDepth( int type )
               ^
../src/opencv2/core/types_c.h:1009:20: warning: 'cvRectToROI' defined but not used [-Wunused-function]
 CV_INLINE  IplROI  cvRectToROI( CvRect rect, int coi )
                    ^
../src/opencv2/core/types_c.h:1022:20: warning: 'cvROIToRect' defined but not used [-Wunused-function]
 CV_INLINE  CvRect  cvROIToRect( IplROI roi )
                    ^
../src/opencv2/core/types_c.h:1043:28: warning: 'cvTermCriteria' defined but not used [-Wunused-function]
 CV_INLINE  CvTermCriteria  cvTermCriteria( int type, int max_iter, double epsilon )
                            ^
../src/opencv2/core/types_c.h:1065:21: warning: 'cvPoint' defined but not used [-Wunused-function]
 CV_INLINE  CvPoint  cvPoint( int x, int y )
                     ^
../src/opencv2/core/types_c.h:1095:26: warning: 'cvPointTo32f' defined but not used [-Wunused-function]
 CV_INLINE  CvPoint2D32f  cvPointTo32f( CvPoint point )
                          ^
../src/opencv2/core/types_c.h:1101:21: warning: 'cvPointFrom32f' defined but not used [-Wunused-function]
 CV_INLINE  CvPoint  cvPointFrom32f( CvPoint2D32f point )
                     ^
../src/opencv2/core/types_c.h:1120:26: warning: 'cvPoint3D32f' defined but not used [-Wunused-function]
 CV_INLINE  CvPoint3D32f  cvPoint3D32f( double x, double y, double z )
                          ^
../src/opencv2/core/types_c.h:1140:26: warning: 'cvPoint2D64f' defined but not used [-Wunused-function]
 CV_INLINE  CvPoint2D64f  cvPoint2D64f( double x, double y )
                          ^
../src/opencv2/core/types_c.h:1160:26: warning: 'cvPoint3D64f' defined but not used [-Wunused-function]
 CV_INLINE  CvPoint3D64f  cvPoint3D64f( double x, double y, double z )
                          ^
../src/opencv2/core/types_c.h:1181:20: warning: 'cvSize' defined but not used [-Wunused-function]
 CV_INLINE  CvSize  cvSize( int width, int height )
                    ^
../src/opencv2/core/types_c.h:1199:25: warning: 'cvSize2D32f' defined but not used [-Wunused-function]
 CV_INLINE  CvSize2D32f  cvSize2D32f( double width, double height )
                         ^
../src/opencv2/core/types_c.h:1244:21: warning: 'cvSlice' defined but not used [-Wunused-function]
 CV_INLINE  CvSlice  cvSlice( int start, int end )
                     ^
../src/opencv2/core/types_c.h:1265:22: warning: 'cvScalar' defined but not used [-Wunused-function]
 CV_INLINE  CvScalar  cvScalar( double val0, double val1 CV_DEFAULT(0),
                      ^
../src/opencv2/core/types_c.h:1275:22: warning: 'cvRealScalar' defined but not used [-Wunused-function]
 CV_INLINE  CvScalar  cvRealScalar( double val0 )
                      ^
../src/opencv2/core/types_c.h:1283:22: warning: 'cvScalarAll' defined but not used [-Wunused-function]
 CV_INLINE  CvScalar  cvScalarAll( double val0123 )
                      ^
../src/opencv2/core/types_c.h:1798:22: warning: 'cvAttrList' defined but not used [-Wunused-function]
 CV_INLINE CvAttrList cvAttrList( const char** attr CV_DEFAULT(NULL),
                      ^
make: *** [src/axi_map.o] ´íÎó 1

15:03:21 Build Finished (took 2s.844ms)

